only show averages of perf measurements, rescale canvas

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="container">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="128" height="128"></canvas>
         <br />
         TPS:
         <button onclick="console.log('tps:', game.tps = 2)">2</button>
